# project-ara

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.e2e.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dep-contract.yml  dependabot-ci.yml  docker-scan.yml  e2e.yml  mutation.yml  publish.yml  test.yml
.superpowers/sdd/: hw-task1-report.md  hw-task2-report.md  hw-task6-report.md  hw-task7-report.md
ara/: __init__.py  __main__.py  _canonical_scoring.py  acquire.py  activity.py  apps.py  benchmark.py  calibration.py  catalog.py  cli.py  db.py  detect.py  engine_audit.py  engine_env.py  engine_identity.py  engines.py  estimate.py  hardware.py  hf_auth.py  hub.py  hub_server.py  locking.py  measurement_authority.py  memory_units.py  methodology.py  mlx.py  ollama.py  ollama_evidence.py  profile.py  profiles.py  pythons.py  registry.py  scoring.py  serialize.py  staleness.py  status.py  targets.py  ui.py  versions.py
ara/_engine_packages/cuda/: NOTICE  pyproject.toml
ara/_engine_packages/cuda/ara_engine_cuda/: __init__.py  benchmark.py  config.py  device.py  generate.py  measure_one.py  models.py  probe.py  probe_worker.py
ara/_engine_packages/mlx/: NOTICE  pyproject.toml
ara/_engine_packages/mlx/ara_engine_mlx/: __init__.py  benchmark.py  config.py  db.py  device.py  embeddings_probe.py  generate.py  kokoro_safety.py  measure_one.py  models.py  probe.py  probe_worker.py  probe_worker_embeddings.py  probe_worker_kokoro.py  probe_worker_kokoro_baseline.py  probe_worker_kokoro_batch.py  probe_worker_kokoro_cache.py  probe_worker_kokoro_ttfa.py  probe_worker_kokoro_voice.py  profiles.py  serve.py  system.py  ui.py  units.py
ara/_engine_packages/mlx/ara_engine_mlx/views/: __init__.py  calibrate.py  characterize.py
ara/_vendor/wcx/: pyproject.toml
ara/_vendor/wcx/wcx_suite/: benchmark.py
ara/_vendor/wmx/: pyproject.toml
ara/_vendor/wmx/wmx_suite/: benchmark.py  generate.py  measure_one.py  probe.py  serve.py
ara/backends/: __init__.py  ane.py  apple.py  coral.py  cpu.py  cuda.py  cuda_gguf.py  esp32.py  hexagon.py  intel_npu.py  oneapi.py  rocm.py  vulkan.py  webgpu.py  xdna.py
ara/contracts/: __init__.py  driver.py  preflight.py  ramp.py  worker.py
ara/data/: usecase_scores.json
ara/data/benchmarks/: bfcl_simple.json  bfcl_simple_20.json  extraction.json  extraction_25.json  gsm8k.json  gsm8k_30.json  humaneval.json  humaneval_25.json  rag.json  rag_20.json
ara/node/: __init__.py  agent.py  app.py  auth.py  capabilities.py  client.py  config.py  enroll.py  health.py  jobs.py  service.py  wiring.py
ara/server/: __init__.py  asgi.py  client.py  manage.py  service.py  settings.py  urls.py  wsgi.py
ara/server/nodes/: __init__.py  admin.py  apps.py  models.py  views.py
ara/server/nodes/migrations/: 0001_initial.py
ara/workers/: __init__.py  cpu_llama.py  cuda_gguf_llama.py  vulkan_llama.py
contracts/wire/: README.md
contracts/wire/fixtures/: enroll-poll.active.valid.json  enroll.request.invalid-extra-property.json  enroll.request.invalid-missing-machine_key.json  enroll.request.valid.json  enroll.response.valid.json  manifest.json  result.request.done.valid.json  result.request.failed.valid.json  result.request.invalid-bad-environment-enum.json  result.request.invalid-bad-status.json  result.request.invalid-done-missing-result.json  result.request.invalid-done-with-error.json  result.request.invalid-failed-empty-error.json  result.request.invalid-failed-missing-error.json  result.request.invalid-failed-null-error.json  result.request.invalid-failed-with-result.json  work.response.characterize-ollama.valid.json  work.response.invalid-ollama-missing-authority.json  work.response.valid.json
contracts/wire/schema/: capability.schema.json  enroll-poll.response.schema.json  enroll.request.schema.json  enroll.response.schema.json  environment.schema.json  result.request.schema.json  work.response.schema.json
coordinator/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  next.config.ts  package-lock.json  package.json  vitest.config.ts
coordinator/src/: instrumentation-node.ts  instrumentation.ts  middleware.ts  proxy.ts
coordinator/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
coordinator/src/lib/: auth.ts  db.ts  enrollment.ts  job-kinds.ts  node-auth.ts  node-client.ts  probe.ts  rate-limit.ts  result-schema.ts  wire-schema.ts  work.ts
coordinator/test/: actions.test.ts  auth.durable.test.ts  auth.test.ts  contracts.test.ts  db.corrupted-meta.test.ts  db.default-path.test.ts  db.enrollment-migration.test.ts  db.smoke.test.ts  documentation.test.ts  enroll-defensive.test.ts  enroll-rate-limit.test.ts  health.test.ts  instrumentation.test.ts  middleware.test.ts  phone-home.lib.test.ts  phone-home.routes.test.ts  proxy.test.ts  rate-limit.test.ts  security-headers.test.ts
coordinator/test/stubs/: server-only.ts
docs/superpowers/specs/: 2026-06-18-ara-wmx-boundary-design.md
scripts/: certify_llama_cpp_cpu.py  fleet_check.sh  mutation_probe.sh  pin_engines.py  vendor_engine.py
tests/: conftest.py  test_acquire.py  test_activity.py  test_activity_lifecycles.py  test_activity_security.py  test_apps.py  test_backends_apple.py  test_backends_cpu.py  test_backends_cuda.py  test_backends_cuda_gguf.py  test_backends_stubs.py  test_backends_vulkan.py  test_benchmark.py  test_calibration.py  test_catalog.py  test_ci_workflows.py  test_cli.py  test_cli_contract.py  test_cli_entrypoint.py  test_cli_node.py  test_cli_server.py  test_cli_task6.py  test_contracts_driver.py  test_contracts_ramp.py  test_contracts_worker.py  test_db.py  test_db_jobs.py  test_dep_contract_hf.py  test_detect.py  test_e2e_phone_home.py  test_engine_audit.py  test_engine_boundary.py  test_engine_contract.py  test_engine_env.py  test_engine_identity.py  test_engine_packaging.py  test_engines.py  test_estimate.py  test_hardware.py  test_hf_auth.py  (+49 more)
(+10 files in other folders)
