[project]
name = "project-ara"
dynamic = ["version"]          # derived from the latest git tag by hatch-vcs (see [build-system])
description = "AI Runs Anywhere — backend-agnostic local inference that fits any hardware safely."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
dependencies = [
    # cross-platform system recon for `ara detect` (read-only; runs on any box)
    "psutil>=5.9",
    # model acquisition — snapshot_download + cache layout; no auth needed for ungated models
    "huggingface_hub>=0.23",
    # per-OS data dir for the persistent store (~/.local/share/ara, %LOCALAPPDATA%\ara, …)
    "platformdirs>=4",
    "gguf>=0.19.0",
]
# The hardware-specific engine (wmx-suite on Apple, wcx-suite on CUDA) is NOT a
# dependency: ARA probes the machine and installs the matched suite on demand via
# `ara install` (see ara/engines.py). That keeps the core universal and the lock
# engine-free, so clone-and-go `uv sync` works on every platform.

[project.scripts]
ara = "ara.cli:main"

# Optional web stacks — NEVER base deps, so `pip install project-ara` stays the 4 lean deps above.
# `ara node` lazy-imports these and tells the user to run `ara node install` (which ensures
# the extra) if absent — the same on-demand philosophy as engines. The node daemon needs FastAPI.
[project.optional-dependencies]
node = ["fastapi>=0.115", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the latest git tag (hatch-vcs) — there is NO hardcoded version. A commit
# tagged v0.0.5 builds as 0.0.5; commits past a tag build as a dev version (e.g. 0.0.5.devN+g<sha>).
# The tag IS the version, so it can never drift from / collide with what's published. Releasing is
# just: tag vX.Y.Z and push the tag (CI builds the clean version from it).
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ara"]

# Test/dev tooling. The suite runs WITHOUT any engine on purpose — it proves the
# core stays engine-free — so it never needs wmx-suite (the seam uses a fake).
[dependency-groups]
# fastapi/uvicorn/httpx are here (not just in the optional extras) so the node code is
# exercised by the 100% coverage gate — httpx backs FastAPI's TestClient.
dev = ["pytest>=8", "pytest-cov>=5", "mutmut>=3",
       "fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The default run is the fast, fully-mocked unit suite (the 100%-coverage gate). Real-engine
# integration tests are excluded here and opted into explicitly: `pytest -m integration --no-cov`.
addopts = "-q --cov=ara --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: real-engine end-to-end (installs an engine env, may download a model); opt-in via `pytest -m integration --no-cov`",
]

[tool.coverage.run]
source = ["ara"]
branch = true
# Built-in engine workers run in their own isolated uv env (with llama-cpp-python etc.),
# not in ARA's test venv — so they can't be exercised here, exactly like the external
# wmx-suite. Their pure logic still has unit tests (tests/test_workers_*), they're just
# out of the 100% core gate.
#
# ara/_vendor/* is the vendored engine source (wmx_suite, wcx_suite) — it ships in the wheel
# but is never imported in ARA's process (it's pip-installed into the isolated engine env and
# driven over a subprocess). It has its own suites' test suites, so it's outside ARA's gate.
omit = ["ara/workers/*", "ara/_vendor/*"]

[tool.coverage.report]
show_missing = true
# Full statement + branch coverage is the standing bar — new code lands with tests.
fail_under = 100
# The lazy `from wmx_suite import ...` lines inside apple.py only execute when a real
# engine is present; the seam's behavior is covered via a fake wmx_suite instead.
exclude_also = ["if TYPE_CHECKING:"]

[tool.mutmut]
source_paths = ["ara"]
# Clear the project's addopts so --cov / fail_under=100 don't make every mutant
# run exit non-zero (which would corrupt kill/survive detection).
pytest_add_cli_args = ["-o", "addopts=", "-p", "no:cacheprovider"]
also_copy = ["tests", "pyproject.toml", "uv.lock"]
