[project]
name = "project-ara"
dynamic = ["version"]          # derived from the latest git tag by hatch-vcs (see [build-system])
description = "AI Runs Anywhere — backend-agnostic local inference that fits any hardware safely."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
dependencies = [
    # cross-platform system recon for `ara detect` (read-only; runs on any box)
    "psutil>=5.9",
    # model acquisition — snapshot_download + cache layout; no auth needed for ungated models
    "huggingface_hub>=0.23",
    # per-OS data dir for the persistent store (~/.local/share/ara, %LOCALAPPDATA%\ara, …)
    "platformdirs>=4",
    "gguf>=0.19.0",
]
# The hardware-specific engine (wmx-suite on Apple, wcx-suite on CUDA) is NOT a
# dependency: ARA probes the machine and installs the matched suite on demand via
# `ara install` (see ara/engines.py). That keeps the core universal and the lock
# engine-free, so clone-and-go `uv sync` works on every platform.

[project.scripts]
ara = "ara.cli:main"

# Optional web stacks — NEVER base deps, so `pip install project-ara` stays the 4 lean deps above.
# The push-only node dials out to its coordinator over httpx — no inbound server, so no FastAPI.
[project.optional-dependencies]
node = ["httpx>=0.27"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the latest git tag (hatch-vcs) — there is NO hardcoded version. A commit
# tagged v0.0.5 builds as 0.0.5; commits past a tag build as a dev version (e.g. 0.0.5.devN+g<sha>).
# The tag IS the version, so it can never drift from / collide with what's published. Releasing is
# just: tag vX.Y.Z and push the tag (CI builds the clean version from it).
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ara"]

# Test/dev tooling. The suite runs WITHOUT any engine on purpose — it proves the
# core stays engine-free — so it never needs wmx-suite (the seam uses a fake).
[dependency-groups]
# httpx is here (not just in the optional [node] extra) so the node's outbound client code is
# exercised by the 100% coverage gate.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mutmut>=3",
    "httpx>=0.27",
    "jsonschema>=4.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The default run is the fast, fully-mocked unit suite (the 100%-coverage gate). Real-engine
# integration tests and the real-dependency contract's online half are excluded here and opted
# into explicitly: `pytest -m integration --no-cov` / `pytest -m dep_contract --no-cov`.
addopts = "-q --cov=ara --cov-report=term-missing -m 'not integration and not dep_contract'"
markers = [
    "integration: real-engine end-to-end (installs an engine env, may download a model); opt-in via `pytest -m integration --no-cov`",
    "dep_contract: real-dependency online contract (hits the real Hugging Face Hub); opt-in via `pytest -m dep_contract --no-cov`",
]

[tool.coverage.run]
source = ["ara"]
branch = true
# Built-in engine workers run in their own isolated uv env (with llama-cpp-python etc.),
# not in ARA's test venv — so they can't be exercised here, exactly like the external
# wmx-suite. Their pure logic still has unit tests (tests/test_workers_*), they're just
# out of the 100% core gate.
#
# ara/_vendor/* is the vendored engine source (wmx_suite, wcx_suite) — it ships in the wheel
# but is never imported in ARA's process (it's pip-installed into the isolated engine env and
# driven over a subprocess). It has its own suites' test suites, so it's outside ARA's gate.
omit = ["ara/workers/*", "ara/_vendor/*"]

[tool.coverage.report]
show_missing = true
# Full statement + branch coverage is the standing bar — new code lands with tests.
fail_under = 100
# The lazy `from wmx_suite import ...` lines inside apple.py only execute when a real
# engine is present; the seam's behavior is covered via a fake wmx_suite instead.
exclude_also = ["if TYPE_CHECKING:"]

[tool.mutmut]
source_paths = ["ara"]
# ara/_vendor/* is the vendored engine source (wmx_suite, wcx_suite) — shipped in the wheel but
# never imported in ARA's process (see [tool.coverage.run] omit above) and outside ARA's own
# gate; it has its own suites' tests, so it's never mutated here either.
do_not_mutate = ["ara/_vendor/*"]
# Clear the project's addopts so --cov / fail_under=100 don't make every mutant
# run exit non-zero (which would corrupt kill/survive detection). Fast, mocked, fail-fast: no
# point paying for coverage instrumentation or a slow suite once per mutant.
pytest_add_cli_args = [
    "-o",
    "addopts=-x -q -m 'not integration and not dep_contract'",
    "-p",
    "no:cacheprovider",
]
# "contracts" carries the wire-schema fixtures (tests/test_wire_contract.py,
# tests/test_node_capabilities.py read them via a repo-root-relative path, not from "ara").
also_copy = ["tests", "pyproject.toml", "uv.lock", "contracts"]
# scripts/mutation_probe.sh appends a temporary `only_mutate` filter here for scoped (weekly
# CI / on-demand) runs, then restores this file — a full unscoped sweep over ara/ (~4900
# statements) reruns the suite per mutant and takes hours, so it's a manual/local long-run only.
