[project]
name = "project-ara"
dynamic = ["version"]          # derived from the latest git tag by hatch-vcs (see [build-system])
description = "AI Runs Anywhere — backend-agnostic local inference that fits any hardware safely."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
dependencies = [
    # command grammar and the shared console/module/programmatic entrypoint
    "click>=8.1",
    # cross-platform system recon for `ara detect` (read-only; runs on any box)
    "psutil>=5.9",
    # model acquisition — snapshot_download + cache layout; no auth needed for ungated models
    "huggingface_hub>=0.23",
    # per-OS data dir for the persistent store (~/.local/share/ara, %LOCALAPPDATA%\ara, …)
    "platformdirs>=4",
    "gguf>=0.19.0",
]
# Hardware-specific engines (native MLX on Apple, CUDA on NVIDIA) are NOT dependencies:
# ARA probes the machine and installs the matched nested package on demand via
# `ara install` (see ara/engines.py). That keeps the core universal and the lock
# engine-free, so clone-and-go `uv sync` works on every platform.

[project.scripts]
ara = "ara.cli:main"

# Optional web stacks — NEVER base deps, so `pip install project-ara` stays the 5 lean deps above.
# The push-only node dials out to its coordinator over httpx — no inbound server, so no FastAPI.
[project.optional-dependencies]
node = ["httpx>=0.27"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the latest git tag (hatch-vcs) — there is NO hardcoded version. A commit
# tagged v0.0.5 builds as 0.0.5; commits past a tag build as a dev version (e.g. 0.0.5.devN+g<sha>).
# The tag IS the version, so it can never drift from / collide with what's published. Releasing is
# just: tag vX.Y.Z and push the tag (CI builds the clean version from it).
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ara"]

# ``ara hub`` builds the exact coordinator paired with the installed ARA version. Keep the wheel
# context explicit so local node_modules, tests, coverage, and Next build output never leak in.
[tool.hatch.build.targets.wheel.force-include]
"coordinator/.dockerignore" = "ara/_hub_source/.dockerignore"
"coordinator/Dockerfile" = "ara/_hub_source/Dockerfile"
"coordinator/compose.yaml" = "ara/_hub_source/compose.yaml"
"coordinator/next.config.ts" = "ara/_hub_source/next.config.ts"
"coordinator/package-lock.json" = "ara/_hub_source/package-lock.json"
"coordinator/package.json" = "ara/_hub_source/package.json"
"coordinator/public" = "ara/_hub_source/public"
"coordinator/src" = "ara/_hub_source/src"
"coordinator/tsconfig.json" = "ara/_hub_source/tsconfig.json"

[tool.hatch.build.targets.sdist]
# Hatch reads the repository-root build configuration, not the coordinator's nested .gitignore.
# Keep local installs, build/test output, runtime state, and secrets out of PyPI source archives.
exclude = [
    "/coordinator/node_modules",
    "/coordinator/.next",
    "/coordinator/out",
    "/coordinator/*.tsbuildinfo",
    "/coordinator/coverage",
    "/coordinator/data",
    "/coordinator/.env",
    "/coordinator/.env.local",
]

# Test/dev tooling. The suite runs without an installed engine on purpose — it proves the
# core stays engine-free while exercising the subprocess seams with test doubles.
[dependency-groups]
# httpx is here (not just in the optional [node] extra) so the node's outbound client code is
# exercised by the 100% coverage gate.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mutmut>=3",
    "httpx>=0.27",
    "jsonschema>=4.26.0",
    "pytest-xdist>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The default run is the fast, fully-mocked unit suite (the 100%-coverage gate). Real-engine
# integration tests, the real-dependency contract's online half, and the cross-process e2e are
# excluded here and opted into explicitly:
#   `pytest -m integration --no-cov` / `-m dep_contract --no-cov` / `-m e2e --no-cov`.
addopts = "-q --cov=ara --cov-report=term-missing -m 'not integration and not dep_contract and not e2e'"
markers = [
    "integration: real-engine end-to-end (installs an engine env, may download a model); opt-in via `pytest -m integration --no-cov`",
    "dep_contract: real-dependency online contract (hits the real Hugging Face Hub); opt-in via `pytest -m dep_contract --no-cov`",
    "e2e: cross-process phone-home loop against a containerized coordinator (needs docker); opt-in via `pytest -m e2e --no-cov`",
]

[tool.coverage.run]
source = ["ara"]
branch = true
# Built-in engine workers run in their own isolated uv env (with llama-cpp-python etc.),
# not in ARA's test venv. Their pure logic still has unit tests (tests/test_workers_*),
# but the subprocess-only worker modules are outside the 100% core gate.
#
# Native engine source ships in the wheel under ``ara/_engine_packages``, but is never imported
# in ARA's process (it is pip-installed into an isolated engine env and driven over a subprocess).
# It is therefore outside ARA's core gate.
omit = ["ara/workers/*", "ara/_engine_packages/*"]

[tool.coverage.report]
show_missing = true
# Full statement + branch coverage is the standing bar — new code lands with tests.
fail_under = 100
# Type-only imports do not execute at runtime and are excluded from branch accounting.
exclude_also = ["if TYPE_CHECKING:"]

[tool.mutmut]
source_paths = ["ara"]
# Nested engine source is subprocess-only and outside ARA's own gate (see the coverage omit
# above), so it is never mutated here either.
do_not_mutate = ["ara/_engine_packages/*"]
# Clear the project's addopts so --cov / fail_under=100 don't make every mutant
# run exit non-zero (which would corrupt kill/survive detection). Fast, mocked, fail-fast: no
# point paying for coverage instrumentation or a slow suite once per mutant. The marker filter
# MUST exclude every non-hermetic suite (integration/dep_contract/e2e) — mutmut runs this as its
# baseline, and a docker/network test erroring here aborts the whole run (-x) and leaves every
# mutant "not checked". Keep this in sync with [tool.pytest.ini_options] addopts.
pytest_add_cli_args = [
    "-o",
    "addopts=-x -q -m 'not integration and not dep_contract and not e2e'",
    "-p",
    "no:cacheprovider",
]
# Repo-root-relative fixtures inspected by the test suite must exist in mutmut's isolated tree
# before baseline stats collection can pass. mutmut copies directories recursively but does not
# create a missing parent for one nested file, hence whole-directory entries where applicable.
also_copy = [
    "tests", "pyproject.toml", "uv.lock", "contracts", "scripts", ".github", "coordinator",
    "README.md", "AGENTS.md", "CONTRIBUTING.md",
]
# scripts/mutation_probe.sh appends a temporary `only_mutate` filter here for scoped (weekly
# CI / on-demand) runs, then restores this file — a full unscoped sweep over thousands of ARA
# statements reruns the suite per mutant and takes hours, so it's a manual/local long-run only.
