[project]
name = "ara-engine-mlx"
version = "0.1.0"
description = "Headless MLX measurement/governance engine for ARA — finds safe context ceilings (and non-LLM workload ceilings) without crashing the machine."
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Will Sarg" }]
requires-python = ">=3.12"
# Base = the LLM measurement/serve path only, so ARA's default `apple` engine env stays lean.
dependencies = [
    "mlx-lm>=0.31",
]

# The non-LLM (Kokoro TTS + embeddings) characterization workers install on demand — same pattern
# as wcx's `[cuda]` extra. ARA requests this only when it drives a non-LLM probe (follow-on wiring);
# until then the workers ship inert (lazy heavy imports) and the default install pulls only mlx-lm.
[project.optional-dependencies]
nonllm = [
    "kokoro-mlx>=0.1.2",
    "mlx-embeddings>=0.1.0",
    "soundfile>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ara_engine_mlx"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
